# Agentic-ERP-Patterns

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-build.yml  daily_monitor.yml
connector/: README.md  openapi.json
deploy/: Dockerfile  api_server.py  docker-compose.yml
deploy/coolify/: project.yml
deploy/n8n/workflows/: crm_lead_nurturing.json  erp_order_pipeline.json
deploy/tunnel/: config.yml
deploy/uptime-kuma/: monitors.json
docs/: index.md  strategic-innovation-report.md
dynamics-365-agentic-rag/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dynamics-365-agentic-rag/agents/: account_health.py  base_agent.py  churn_sentinel.py  competitive_intel.py  contract_negotiator.py  deal_predictor.py  pipeline_optimizer.py  relationship_mapper.py  revenue_hunter.py  sales_coach.py  voice_of_customer.py
dynamics-365-agentic-rag/config/: settings.py
dynamics-365-agentic-rag/d365/: client.py
dynamics-365-agentic-rag/docs/: ARCHITECTURE.md
dynamics-365-agentic-rag/mcp_server/: server.py
dynamics-365-agentic-rag/rag/: indexer.py  vector_store.py
examples/: quickstart_azure_ai.py  quickstart_dataverse.py  quickstart_dynamics365.py  quickstart_multi_platform.py  quickstart_power_platform.py  quickstart_salesforce.py
monitor/: __init__.py  daily_report.py  demo_monitor.py  health_check.py
monitor/reports/: report_2026-06-14.json  report_2026-06-14.md
src/agentic_erp/: __init__.py
src/agentic_erp/agents/: __init__.py  ap_agent.py  ar_agent.py  async_base.py  autonomous_profitability_agent.py  base.py  cashflow_forecast_agent.py  compliance_agent.py  crm_agent.py  crypto_payment_agent.py  fixed_assets_agent.py  forecasting_agent.py  fraud_detection_agent.py  game_analytics_agent.py  gl_agent.py  hr_agent.py  inventory_agent.py  order_agent.py  sales_agent.py  supply_chain_agent.py  treasury_agent.py  vendor_risk_agent.py
src/agentic_erp/ai/: __init__.py  azure_ai_agent.py  document_intelligence_agent.py  forecasting_agent.py  knowledge_base_agent.py  sentiment_agent.py
src/agentic_erp/api/: __init__.py  data_sync_agent.py  gateway_agent.py  power_platform_agent.py  server.py  webhook_processor_agent.py
src/agentic_erp/cache/: response_cache.py
src/agentic_erp/connectors/: __init__.py  auth.py  azure_ai.py  base.py  coolify.py  d365.py  dataverse.py  dynamics365.py  n8n.py  power_platform.py  salesforce.py  uptime_kuma.py
tests/: test_agent_observability.py  test_agents.py  test_ai_agents.py  test_api.py  test_api_agents.py  test_async_and_connectors.py  test_async_base.py  test_async_orchestrator.py  test_autonomous_profitability.py  test_azure_ai_live.py  test_circuit_breaker.py  test_connectors.py  test_crm_agents.py  test_dataverse_live.py  test_dynamics365_live.py  test_erp_agents.py  test_live_platform_orchestrator.py  test_new_agents.py  test_new_tools.py  test_observability.py  test_power_platform_live.py  test_prompt_cache.py  test_response_cache.py  test_salesforce_live.py  test_server.py  test_server_middleware.py  test_streaming.py  test_tools.py
tests/integration/: test_agents_live.py  test_d365_live.py  test_teams_live.py
(+56 files in other folders)
