[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-erp-patterns"
version = "0.1.0"
description = "Enterprise Agentic AI architecture patterns for ERP systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_erp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.coverage.run]
source = ["src/agentic_erp"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
