[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-erp-patterns"
version = "0.1.0"
description = "Enterprise Agentic AI architecture patterns for ERP systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_erp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
