[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamics-365-agentic-rag"
version = "1.0.0"
description = "10 Agentic RAG MCP AI agents for Microsoft Dynamics 365 CRM"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "chromadb>=0.5.0",
    "msal>=1.31.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "sentence-transformers>=3.0.0",
    "tenacity>=8.0.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
d365-rag-server = "mcp_server.server:main"
d365-rag-index = "rag.indexer:main"

[tool.setuptools.packages.find]
where = ["dynamics-365-agentic-rag"]
